# tinyspline

./: CMakeLists.txt  README.md  _formulas.tex  annotated.html  classes.html  classtinyspline_1_1_b_spline-members.html  classtinyspline_1_1_b_spline.html  classtinyspline_1_1_de_boor_net-members.html  classtinyspline_1_1_de_boor_net.html  classtinyspline_1_1_utils-members.html  classtinyspline_1_1_utils.html  debugging_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  structts_b_spline-members.html  structts_b_spline.html  structts_b_spline__coll__graph.map  structts_b_spline__coll__graph.md5  structts_b_spline_impl-members.html  structts_b_spline_impl.html  structts_de_boor_net-members.html  structts_de_boor_net.html  structts_de_boor_net__coll__graph.map  structts_de_boor_net__coll__graph.md5  structts_de_boor_net_impl-members.html  structts_de_boor_net_impl.html  tabs.css  tinyspline_8h.html  tinyspline_8h__dep__incl.map  tinyspline_8h__dep__incl.md5  tinyspline_8h__incl.map  (+3 more)
.circleci/: config.yml
ci/: install_debs.sh
ci/.circleci/: config.yml
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_2.js  enums_0.js  files_0.js  functions_0.js  pages_0.js  search.css  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_6.js
src/: CMakeLists.txt  tinysplinecpp.h
tests/: CMakeLists.txt  tinyspline_c_tests.cpp
